<resources>
    <string name="app_name">chicken!chicken!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cafe">카페</string>
    <string name="nav_dining_korea">한식</string>
    <string name="nav_dining_snack">분식</string>
    <string name="nav_dining_japanese">일식</string>
    <string name="nav_dining_chinese">중식</string>
    <string name="nav_dining_western">양식</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="str_done">완료</string>
    <string name="finding_path_button">길찾기</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
