<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cafe"
            android:icon="@drawable/cafe"
            android:title="@string/cafe" />
        <item
            android:id="@+id/nav_dining_korea"
            android:icon="@drawable/dining_korea"
            android:title="@string/nav_dining_korea" />
        <item
            android:id="@+id/nav_dining_snack"
            android:icon="@drawable/dining_snack2"
            android:title="@string/nav_dining_snack" />
        <item
            android:id="@+id/nav_dining_japanese"
            android:icon="@drawable/dining_japanese"
            android:title="@string/nav_dining_japanese" />

        <item
            android:id="@+id/nav_dining_chinese"
            android:icon="@drawable/dining_chinese"
            android:title="@string/nav_dining_chinese" />

        <item
            android:id="@+id/nav_dining_western"
            android:icon="@drawable/dining_western"
            android:title="@string/nav_dining_western" />
    </group>

    <item android:title="">
        <menu>
        </menu>
    </item>

</menu>
